fix latter spacing

--- a/assets/main.css
+++ b/assets/main.css
@@ -59,7 +59,6 @@
 }
 .section_title.lg_mod {
     line-height: 0.7;
-    letter-spacing: -0.5em;
 }
 @media screen and (min-width: 1024px) {
     .section_title.lg_mod {
@@ -87,7 +86,7 @@
 }
 .section_title span.size_in {
     font-size: 1.3em;
-    letter-spacing: -0.5em;
+    letter-spacing: -0.1em;
 }
 .section_title span.size_in_2 {
     font-size: 1.9em;
